# upic-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  server.py
tests/: test_e2e.py  test_integration.py  test_unit.py
